tests/error_corpus/validation_errors/not_implemented/E208_empty_replacement.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
@Comment:	Expected error: E208 (Empty replacement)
@Comment:	Trigger: Replacement with empty target
*CHI:	hello [: ] .
@End
