tests/error_corpus/parse_errors/E346_unmatched_scoped_end.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
@Comment:	Expected error: E346 (Unmatched scoped annotation end)
@Comment:	Trigger: Closing > without matching <
*CHI:	hello world> [/] .
@End
